@@ -29,6 +29,23 @@
             <artifactId>ignite-core</artifactId>
             <version>${ignite.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId><artifactId>junit-jupiter</artifactId>
+            <version>5.10.2</version><scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId><artifactId>assertj-core</artifactId>
+            <version>3.25.3</version><scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId><artifactId>awaitility</artifactId>
+            <version>4.2.1</version><scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId><artifactId>mockito-core</artifactId>
+            <version>5.11.0</version><scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -38,8 +55,23 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <release>17</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/java.nio=ALL-UNNAMED
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
